# scrapbook

./: .gitignore  README.md  exmaple.py  qt_stuff.py  shortcut.py  trying_stuff.py
obsidian-scrapbook/: README.obs.md  main.js  main.ts  manifest.json  package-lock.json  package.json  settingsTab.ts
python-server/: pyproject.toml
python-server/src/scrapbook/: __init__.py  __main__.py  add_text_doc.py  break_start.py  break_stop.py  display_overlay.py  display_question.py  new_input.py  new_question.py  screenshot_and_input.py  server.py  shortcut.py
scrap_server/: README.md
scrap_server/src/: shortcut.py
